--- a/Haskell-bridge.cabal
+++ b/Haskell-bridge.cabal
@@ -14,13 +14,14 @@ extra-doc-files:    CHANGELOG.md
 -- extra-source-files:
 
 common warnings
-    ghc-options: -Wall
+    ghc-options: -Wall -Wno-name-shadowing -Wextra
 
 executable Haskell-bridge
     import:           warnings
     main-is:          Main.hs
-    -- other-modules:
+    other-modules:    Player, Calls, Auction, Play, BiddingSAYCSimplified, Cards
     -- other-extensions:
-    build-depends:    base ^>=4.17.2.1, array, random-shuffle, MonadRandom
-    hs-source-dirs:   app
+    build-depends:    base ^>=4.17.2.1, array, random-shuffle, MonadRandom,
+      mtl, process, ansi-terminal
+    hs-source-dirs:   src
     default-language: Haskell2010
