--- a/Haskell-bridge.cabal
+++ b/Haskell-bridge.cabal
@@ -14,7 +14,7 @@ extra-doc-files:    CHANGELOG.md
 -- extra-source-files:
 
 common warnings
-    ghc-options: -Wall -Wno-name-shadowing -Wextra -XScopedTypeVariables
+    ghc-options: -Wno-name-shadowing -XScopedTypeVariables
 
 executable Haskell-bridge
     import:           warnings
